--- a/syslinux/archiso_sys.cfg
+++ b/syslinux/archiso_sys.cfg
@@ -2,12 +2,12 @@ INCLUDE boot/syslinux/archiso_head.cfg
 
 LABEL arch64
 TEXT HELP
-Boot the Arch Linux (x86_64) live medium.
-It allows you to install Arch Linux or perform system maintenance.
+Boot the CobraOS live medium.
+You should boot right to a graphical environment.
 ENDTEXT
-MENU LABEL Boot Arch Linux (x86_64)
+MENU LABEL Boot CobraOS
 LINUX boot/x86_64/vmlinuz
 INITRD boot/intel_ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% quiet copytoram
 
 INCLUDE boot/syslinux/archiso_tail.cfg
