--- a/syslinux/archiso_tail.cfg
+++ b/syslinux/archiso_tail.cfg
@@ -3,20 +3,9 @@ TEXT HELP
 Boot an existing operating system.
 Press TAB to edit the disk and partition number to boot.
 ENDTEXT
-MENU LABEL Boot existing OS
+MENU LABEL Boot local OS
 COM32 boot/syslinux/chain.c32
 APPEND hd0 0
-
-# http://www.memtest.org/
-LABEL memtest
-MENU LABEL Run Memtest86+ (RAM test)
-LINUX boot/memtest
-
-# http://hdt-project.org/
-LABEL hdt
-MENU LABEL Hardware Information (HDT)
-COM32 boot/syslinux/hdt.c32
-APPEND modules_alias=boot/syslinux/hdt/modalias.gz pciids=boot/syslinux/hdt/pciids.gz
 
 LABEL reboot
 MENU LABEL Reboot
