I don't know what I'm committing anymore, really.

--- a/syslinux/archiso_tail.cfg
+++ b/syslinux/archiso_tail.cfg
@@ -3,7 +3,7 @@ TEXT HELP
 Boot an existing operating system.
 Press TAB to edit the disk and partition number to boot.
 ENDTEXT
-MENU LABEL Boot local OS
+MENU LABEL Local system
 COM32 boot/syslinux/chain.c32
 APPEND hd0 0
 
