Reduce a timeout which would cause nodm to not stop properly at times

--- a/airootfs/etc/nodm.conf
+++ b/airootfs/etc/nodm.conf
@@ -2,5 +2,5 @@ NODM_USER='student'
 NODM_XSESSION='/usr/bin/xfce4-session'
 
 NODM_X_OPTIONS='vt7 -nolisten tcp'
-NODM_MIN_SESSION_TIME=60
+NODM_MIN_SESSION_TIME=5
 NODM_X_TIMEOUT=20
